src/layouts/BasicLayout.less
.root {
  // margin-bottom: 24px;
  .titleHeader {
    display: flex;
    align-items: center;
    height: 100%;
    .buttonToggle {
      display: flex;
      align-items: center;
      justify-content: center;
      width: 80px;
      height: 100%;
      background-color: #161c29;
      cursor: pointer;
    }
  }

  :global {
    .ant-affix {
      z-index: 10 !important;
    }
    .ant-breadcrumb-link {
      display: inline-flex;
    }

    .ant-breadcrumb a {
      color: #161c29;
      font-size: 13px;
      opacity: 0.6;
    }

    .ant-breadcrumb-separator {
      display: none;
      margin: 0px 20px;
      color: rgba(0, 0, 0, 0.45);
      font-size: large;
    }

    .ant-breadcrumb {
      .ant-breadcrumb-link {
        a {
          z-index: 1;
        }
      }

      > span:nth-child(n):not(:last-child):not(:first-child) {
        a {
          display: inline-block;
          padding: 8px 14px;
          color: #000;
          font-weight: 500;
          opacity: 1;
        }
        span.ant-breadcrumb-link {
          position: relative;
          display: inline-flex;
          align-items: center;
          justify-content: center;
          height: 30px;
          padding: 4px 14px;

          &::after {
            position: absolute;
            top: 0px;
            left: 0;
            z-index: 0;
            display: block;
            width: 100%;
            height: 30px;
            border: 1px solid #ccc;
            transform: skewX(-32deg);
            content: '';
          }
        }
        span.ant-breadcrumb-separator {
          display: block;
          display: none;
          margin-bottom: -4px;
        }
      }
    }
    .ant-breadcrumb {
      > span:first-child {
        a {
          display: inline-block;
          padding: 8px 20px;
          color: #000;
          font-weight: 500;
          opacity: 1;
        }
        span.ant-breadcrumb-link {
          position: relative;
          display: inline-flex;
          align-items: center;
          justify-content: center;
          height: 30px;
          padding: 4px 0px;

          &::after {
            position: absolute;
            top: 0px;
            left: 0px;
            z-index: 0;
            display: block;
            width: 100%;
            height: 34px;
            border: 1px solid #ccc;
            border-right: none !important;
            border-left: none !important;
            transform: perspective(63px) rotateX(-30deg);
            transform-origin: left center;
            content: '';
          }
        }
        span.ant-breadcrumb-separator {
          display: block;
          display: none;
          margin-bottom: -4px;
        }
      }
    }
    .ant-pro-menu-item {
      display: flex;
      align-items: center;
      justify-content: center;
    }
    .ant-layout.ant-layout-has-sider > .ant-layout,
    .ant-layout.ant-layout-has-sider > .ant-layout-content {
      width: 100%;
      overflow: hidden;
    }
    .ant-layout {
      background-color: #f6f7f9;
    }

    .ant-layout-header{
      margin-left: 80px;
    }

    .ant-pro-sider{
      position: fixed !important;
    }

    .ant-layout-content{
      // overflow: initial !important;
    }

    .ant-pro-global-header-layout-mix {
      background-color: #fff;
    }
    .ant-pro-page-container-children-content {
      margin: 0;
    }

    .ant-pro-sider.ant-layout-sider-collapsed .ant-pro-sider-logo {
      padding: 0;
    }
    .ant-pro-sider-logo {
      position: relative;
      display: flex;
      align-items: center;
      height: 76px;
      padding: 0;
      line-height: 32px;
      background-color: #161c29;
      cursor: pointer;
    }

    .ant-pro-global-header{
      padding: 0;
      padding-right: 16px;
    }

    .ant-pro-global-header-logo {
      display: none;
    }
    .ant-pro-basicLayout-content {
      position: relative;
      margin: 0px;
      padding: 24px 24px 48px;
    }
    .ant-page-header {
      width: 100%;
      padding: 0;
      background-color: #eeeeee;
    }

    .ant-breadcrumb {
      display: flex;
      align-items: center;
      height: 30px;
      span {
        display: flex;
        align-items: center;
      }
    }

    .ant-page-header-heading {
      display: none;
    }

    .ant-pro-sider-light {
      width: 80px !important;
      min-width: 80px !important;
      max-width: 80px !important;
      transition: min-width 0.3s, max-width 0.3s;
      .ant-menu-item .anticon + span,
      .ant-menu-submenu-title .anticon + span {
        display: none;
        opacity: 0.5;
      }
      .ant-menu-vertical .ant-menu-item,
      .ant-menu-vertical-left .ant-menu-item,
      .ant-menu-vertical-right .ant-menu-item,
      .ant-menu-inline .ant-menu-item,
      .ant-menu-vertical .ant-menu-submenu-title,
      .ant-menu-vertical-left .ant-menu-submenu-title,
      .ant-menu-vertical-right .ant-menu-submenu-title,
      .ant-menu-inline .ant-menu-submenu-title {
        display: flex;
        align-items: center;
        justify-content: center;
        padding: 0 !important;
      }
      &:hover {
        z-index: 1000;
        width: 242px !important;
        min-width: 242px !important;
        max-width: 242px !important;
        box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.456);
        transition: min-width 0.3s, max-width 0.3s;
        .ant-menu-vertical .ant-menu-item,
        .ant-menu-vertical-left .ant-menu-item,
        .ant-menu-vertical-right .ant-menu-item,
        .ant-menu-inline .ant-menu-item,
        .ant-menu-vertical .ant-menu-submenu-title,
        .ant-menu-vertical-left .ant-menu-submenu-title,
        .ant-menu-vertical-right .ant-menu-submenu-title,
        .ant-menu-inline .ant-menu-submenu-title {
          justify-content: start;
          padding-left: 24px !important;
        }
        .ant-pro-menu-item {
          justify-content: flex-start;
        }
        .ant-menu-item .anticon + span,
        .ant-menu-submenu-title .anticon + span {
          display: inline-block;
          margin-left: 10px !important;
          color: #fff;
          font-weight: 600;
          font-size: 13px;
        }
      }
    }

    .ant-pro-sider-light .ant-menu-light {
      background-color: #2c6df9;
    }
    .ant-pro-sider.ant-layout-sider-light .ant-menu-item a {
      color: #fff;
    }
    .ant-menu:not(.ant-menu-horizontal) .ant-menu-item-selected {
      background-color: #2c6df9;
    }
    .ant-menu-item-selected {
      background-image: linear-gradient(to right, #2c6df9, #144ecb);
      border-right: 3px solid #fff;
    }

    .ant-menu-item-selected > a > .ant-pro-menu-item > .ant-pro-menu-item-title {
      opacity: 1;
    }

    .ant-menu-item-active > a > .ant-pro-menu-item > .ant-pro-menu-item-title {
      opacity: 1;
    }

    .ant-menu-item-active {
      background-color: rgba(0, 0, 0, 0.204);
    }

    .ant-pro-sider .ant-menu-inline-collapsed .ant-menu-item {
      display: flex;
      align-items: center;
      justify-content: center;
    }
    .ant-menu-item .anticon,
    .ant-menu-submenu-title .anticon {
      min-width: 35px;
      margin-right: 0 !important;
    }
    .ant-menu-item-only-child {
      display: flex;
      align-items: center;
      height: 75px;
      margin: 0 !important;
      border-bottom: 1px solid #3158d1;
      &:active {
        height: 75px;
        margin: 0 !important;
        background-color: #2c6df9;
      }
    }
    .ant-menu-vertical .ant-menu-item::after,
    .ant-menu-vertical-left .ant-menu-item::after,
    .ant-menu-vertical-right .ant-menu-item::after,
    .ant-menu-inline .ant-menu-item::after {
      border-right: none;
    }
  }

  @media screen and (max-width: 768px) {
    :global {
      .ant-page-header {
        padding: 0.5rem 2rem;
      }
      .ant-pro-page-container-children-content {
        margin: 0;
        padding: 0 2rem;
      }
    }
  }

  .footerFlex {
    position: fixed;
    bottom: 0;
    z-index: 9;
    display: flex;
    flex-flow: row nowrap;
    justify-content: space-between;
    width: 100%;
    padding: 14px 150px;
    color: rgba(0, 0, 0, 0.65);
    font-size: 12px;
    background-color: #fff;
    box-shadow: 0 10px 30px 3px #c7bcbc;
  }

  .logoSection{
    height: 76px;
    display: flex;

    &__button{
      width: 80px;
      height: 76px;
      background-color: #161c29;
      border: none;
      border-radius: 0;
    }
  }
}

.expandMenu{
  :global{
    .ant-pro-sider-light{
      transition: min-width 0.3s, max-width 0.5s all ease-in-out;
      -moz-transition: min-width 0.3s, max-width 0.5s all ease-in-out;
      -ms-transition: min-width 0.3s, max-width 0.5s all ease-in-out;
      -o-transition: min-width 0.3s, max-width 0.5s all ease-in-out;
      -webkit-transition: min-width 0.3s, max-width 0.5s all ease-in-out;

      min-width: 80px !important;
      max-width: 80px !important;
    }
  }
}

.collapseMenu{
  :global{
    .ant-pro-sider-light{
      transition: min-width 0.3s, max-width 0.5s all ease-in-out;
      -moz-transition: min-width 0.3s, max-width 0.5s all ease-in-out;
      -ms-transition: min-width 0.3s, max-width 0.5s all ease-in-out;
      -o-transition: min-width 0.3s, max-width 0.5s all ease-in-out;
      -webkit-transition: min-width 0.3s, max-width 0.5s all ease-in-out;

      min-width: 0 !important;
      max-width: 0 !important;
    }

    .ant-layout-header{
      margin-left: 0 !important;
    }
  }
}

.breadCrumbA {
  :global {
    .ant-breadcrumb > span:last-child a {
      display: flex;
      align-items: center;
      height: 30px;
      padding: 0 15px;
      color: #161c29;
      font-weight: 500;
      font-size: 13px;
      background-color: #fff;
      border-top-left-radius: 5px;
      border-top-right-radius: 5px;
      opacity: 1;
    }
  }
}

.breadCrumbB {
  :global {
    .ant-breadcrumb > span:last-child a {
      position: relative;
      display: flex;
      align-items: center;
      height: 30px;
      padding: 4px 28px;
      color: #161c29;
      color: rgb(44, 109, 249);
      font-weight: 500;
      font-size: 13px;
      border-top-left-radius: 5px;
      border-top-right-radius: 5px;
      opacity: 1;

      &::after {
        position: absolute;
        top: 0;
        left: 0;
        display: block;
        width: 100%;
        height: 30px;
        border: 1px solid rgb(44, 109, 249);
        border-radius: 0 0 20px 0;

        transform: skewX(-32deg);
        content: '';
      }
    }
  }
}

.hiddenBreadCrumb {
  :global {
    .ant-page-header {
      display: none;
    }
  }
}

.rightContent {
  .btnSwitch {
    position: absolute;
    right: 20px;
    width: fit-content;
    height: fit-content;
    line-height: 0 !important;

    :global {
      .ant-switch {
        margin-top: 10px;
      }

      .ant-switch-checked {
        background-color: #568afa;
      }

      .anticon-user-switch {
        font-size: 16px;
      }
    }
  }
}

